--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="top-menu">
             <div class="center">
-                <h1>Jawad Khalil Test</h1>
+                <h1>Jawad Khalil Tester</h1>
                 <div class="contact_info">
                     <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/envelope.png?raw=true" width="20" height="20" alt="https://icons8.com/icon/124377/circled-envelope"/>
                     <a style="color: pink" href="https://mail.google.com/mail/u/1/#inbox/FMfcgzGxSRPjQzRtdrnszZCWhwVwWPdG?compose=GTvVlcRwRCXBrMFVNSbFwbXcRvkVwdjxcdXnGXzMngmMvSVDbSMPmCMhFJQprskkTxDMSMkxXhlCW" target="_blank">iamjawadkhalil@gmail.com</a>
