--- a/index.html
+++ b/index.html
@@ -369,5 +369,11 @@
     </main>
   <a href="#" id="scrollToTopBtn" class="scroll-to-top-btn" title="Scroll to Top">&uarr;</a>
     <script src="script.js"></script>
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2024 Jawad Khalil. All rights reserved.</p>
+    </div>
+</footer>
+
 </body>
 </html>
