--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <script src="script.js"></script>
 <footer class="footer">
     <div class="footer-content">
-        <p>&copy; 2024 Jawad Khalil. All rights reserved.</p>
+        <p>&copy; <span id="footerYear"></span> Jawad Khalil. All rights reserved.</p>
     </div>
 </footer>
 
