--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
                 <li><a href="#project1">Project 1</a></li>
                 <li><a href="#project2">Project 2</a></li>
                 <li><a href="#project3">Project 3</a></li>
+                <li><a href="#project4">Project 4</a></li>
+                <li><a href="#project5">Project 5</a></li>
+                <li><a href="#project6">Project 6</a></li>
+                <li><a href="#project7">Project 7</a></li>
+                <li><a href="#project8">Project 8</a></li>
+                <li><a href="#project9">Project 9</a></li>
             </ul>
         </nav>
     </header>
     <section class="projects-details-section">
-        <div id="project1" class="project">
-            <h2>Project 1</h2>
-            <p>Details about Project 1...</p>
-        </div>
         <div id="project2" class="project">
             <h2>Project 2</h2>
             <p>Details about Project 2...</p>
@@ -31,6 +33,34 @@
         <div id="project3" class="project">
             <h2>Project 3</h2>
             <p>Details about Project 3...</p>
+        </div>
+        <div id="project4" class="project">
+            <h2>Project 4</h2>
+            <p>Details about Project 1...</p>
+        </div>
+        <div id="project5" class="project">
+            <h2>Project 5</h2>
+            <p>Details about Project 2...</p>
+        </div>
+        <div id="project6" class="project">
+            <h2>Project 6</h2>
+            <p>Details about Project 3...</p>
+        </div>
+         <div id="project7" class="project">
+            <h2>Project 7</h2>
+            <p>Details about Project 1...</p>
+        </div>
+        <div id="project8" class="project">
+            <h2>Project 8</h2>
+            <p>Details about Project 2...</p>
+        </div>
+        <div id="project9" class="project">
+            <h2>Project 9</h2>
+            <p>Details about Project 3...</p>
+        </div>
+                <div id="project1" class="project">
+            <h2>Project 1</h2>
+            <p>Details about Project 1...</p>
         </div>
     </section>
     <button id="scrollToTopBtn" title="Go to top">&#8679;</button>
