--- a/index.html
+++ b/index.html
@@ -1,38 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects test</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="scripts.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects test</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="scripts.js"></script>
 </head>
+
 <body>
-    <header>
-        <h1>My Projects</h1>
-        <nav class="navbar">
-            <button class="menu-btn" id="menuBtn">&#9776; Menu</button>
-            <ul class="nav-list" id="navList">
-                <li><a href="#project1">Project 1</a></li>
-                <li><a href="#project2">Project 2</a></li>
-                <li><a href="#project3">Project 3</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="projects-details-section">
-        <div id="project1" class="project">
-            <h2>Project 1</h2>
-            <p>Details about Project 1...</p>
-        </div>
-        <div id="project2" class="project">
-            <h2>Project 2</h2>
-            <p>Details about Project 2...</p>
-        </div>
-        <div id="project3" class="project">
-            <h2>Project 3</h2>
-            <p>Details about Project 3...</p>
-        </div>
-    </section>
-    <button id="scrollToTopBtn" title="Go to top">&#8679;</button>
+  <header>
+    <h1>My Projects</h1>
+    <nav class="navbar">
+      <button class="menu-btn" id="menuBtn">&#9776; Menu</button>
+      <ul class="nav-list" id="navList">
+        <li><a href="#data-analysis">1. Data Analysis</a></li>
+        <li><a href="#website-portfolio">2. Single Page Website Portfolio </a></li>
+        <li><a href="#latex-compilation">3. Compiled Some Books with Latex</a></li>
+        <li><a href="#practical-teaching">4. A Guided Project of Practical Teaching</a></li>
+        <li><a href="#python-parsing">5. Data Parsing with Python</a></li>
+        <li><a href="#wholesale-manager">6. Wholesale Manager</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="projects-details-section">
+    <!-- Project 1 -->
+    <div id="project1" class="project">
+      <h2>1. Data Analysis</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>Python</li>
+          <li>Pandas</li>
+          <li>NumPy</li>
+          <li>Data Visualization</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p><b>Data Analyst<b></p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 1...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>January 2023 - June 2023</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Handling large datasets efficiently.</p>
+        <p>Solution: Implemented data preprocessing techniques and optimized queries.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: ABC Corporation</p>
+        <p>Team: John Doe, Jane Smith</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot1-1.jpg" alt="Screenshot 1 of Data Analysis project">
+        <img src="path/to/screenshot1-2.jpg" alt="Screenshot 2 of Data Analysis project">
+      </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div id="project2" class="project">
+      <h2>2. Web Development</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Front-end Developer</p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 2...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>March 2023 - August 2023</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Ensuring cross-browser compatibility.</p>
+        <p>Solution: Used responsive design techniques and tested across multiple browsers.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: XYZ Inc.</p>
+        <p>Team: Alice Johnson, Mark Lee</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot2-1.jpg" alt="Screenshot 1 of Web Development project">
+        <img src="path/to/screenshot2-2.jpg" alt="Screenshot 2 of Web Development project">
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div id="project3" class="project">
+      <h2>3. Machine Learning</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>Python</li>
+          <li>TensorFlow</li>
+          <li>Scikit-Learn</li>
+          <li>Data Preprocessing</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Machine Learning Engineer</p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 3...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>May 2023 - November 2023</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Optimizing model performance.</p>
+        <p>Solution: Used hyperparameter tuning and cross-validation techniques.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: DEF Ltd.</p>
+        <p>Team: Sarah Brown, Tom Harris</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot3-1.jpg" alt="Screenshot 1 of Machine Learning project">
+        <img src="path/to/screenshot3-2.jpg" alt="Screenshot 2 of Machine Learning project">
+      </div>
+    </div>
+
+    <!-- Project 4 -->
+    <div id="project4" class="project">
+      <h2>4. Mobile App Development</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>Flutter</li>
+          <li>Dart</li>
+          <li>Firebase</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Mobile App Developer</p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 4...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>July 2023 - December 2023</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Integrating with third-party APIs.</p>
+        <p>Solution: Used robust error handling and data validation.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: GHI Co.</p>
+        <p>Team: Emily Davis, Kevin Nguyen</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot4-1.jpg" alt="Screenshot 1 of Mobile App Development project">
+        <img src="path/to/screenshot4-2.jpg" alt="Screenshot 2 of Mobile App Development project">
+      </div>
+    </div>
+
+    <!-- Project 5 -->
+    <div id="project5" class="project">
+      <h2>5. E-commerce Website</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>PHP</li>
+          <li>Laravel</li>
+          <li>MySQL</li>
+          <li>JavaScript</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Back-end Developer</p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 5...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>October 2023 - March 2024</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Implementing secure payment gateway.</p>
+        <p>Solution: Integrated with a reliable payment processor and used encryption.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: JKL Enterprises</p>
+        <p>Team: Rachel Green, Mike Scott</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot5-1.jpg" alt="Screenshot 1 of E-commerce Website project">
+        <img src="path/to/screenshot5-2.jpg" alt="Screenshot 2 of E-commerce Website project">
+      </div>
+    </div>
+
+    <!-- Project 6 -->
+    <div id="project6" class="project">
+      <h2>6. Game Development</h2>
+
+      <div class="skills">
+        <h3>Skills Used:</h3>
+        <ul class="skills-list">
+          <li>Unity</li>
+          <li>C#</li>
+          <li>3D Modeling</li>
+        </ul>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Game Developer</p>
+      </div>
+
+      <div class="overview">
+        <h3>Overview:</h3>
+        <p>Details about Project 6...</p>
+      </div>
+
+      <div class="duration">
+        <h3>Duration:</h3>
+        <p>February 2024 - July 2024</p>
+      </div>
+
+      <div class="challenges">
+        <h3>Challenges and Solutions:</h3>
+        <p>Challenge: Balancing game difficulty and user engagement.</p>
+        <p>Solution: Implemented adaptive difficulty and user feedback loops.</p>
+      </div>
+
+      <div class="client-team">
+        <h3>Client/Team Information:</h3>
+        <p>Client: MNO Studios</p>
+        <p>Team: Laura Johnson, Chris Evans</p>
+      </div>
+
+      <div class="screenshot">
+        <h3>Screenshots:</h3>
+        <img src="path/to/screenshot6-1.jpg" alt="Screenshot 1 of Game Development project">
+        <img src="path/to/screenshot6-2.jpg" alt="Screenshot 2 of Game Development project">
+      </div>
+    </div>
+
+  </section>
+  <button id="scrollToTopBtn" title="Go to top">&#8679;</button>
 </body>
+
 </html>
