--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
-<!DOCTYPE html>
+</b><!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects test</title>
+  <title>Jawad's Projects</title>
   <link rel="stylesheet" href="styles.css">
   <script defer src="scripts.js"></script>
 </head>
 
 <body>
   <header>
-    <h1>My Projects</h1>
-    <nav class="navbar">
-      <button class="menu-btn" id="menuBtn">&#9776; Menu</button>
-      <ul class="nav-list" id="navList">
-        <li><a href="#data-analysis">1. Data Analysis</a></li>
-        <li><a href="#website-portfolio">2. Single Page Website Portfolio </a></li>
-        <li><a href="#latex-compilation">3. Compiled Some Books with Latex</a></li>
-        <li><a href="#practical-teaching">4. A Guided Project of Practical Teaching</a></li>
-        <li><a href="#python-parsing">5. Data Parsing with Python</a></li>
-        <li><a href="#wholesale-manager">6. Wholesale Manager</a></li>
-      </ul>
-    </nav>
+    <h1>Jawad's Projects</h1>
+    <div class="center">
+      <div class="contact_info">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/envelope.png?raw=true" width="20" height="20" alt="https://icons8.com/icon/124377/circled-envelope" />
+        <a style="color: white" href="https://mail.google.com/mail/u/1/#inbox/FMfcgzGxSRPjQzRtdrnszZCWhwVwWPdG?compose=GTvVlcRwRCXBrMFVNSbFwbXcRvkVwdjxcdXnGXzMngmMvSVDbSMPmCMhFJQprskkTxDMSMkxXhlCW" target="_blank">iamjawadkhalil@gmail.com</a>
+      </div>
+      <div style="clear:both;"></div>
+      <div class="contact_info">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/phone.png?raw=true" width="20" height="20" alt="https://icons8.com/icon/124377/circled-envelope" />
+        +923481552147
+      </div>
+      <nav class="navbar">
+        <button class="menu-btn" id="menuBtn">&#9776; Menu</button>
+        <ul class="nav-list" id="navList">
+          <li><a href="#data-analysis">1. Data Analysis</a></li>
+          <li><a href="#website-portfolio">2. Single Page Website Portfolio </a></li>
+          <li><a href="#latex-compilation">3. Compiled Some Books with LaTeX</a></li>
+          <li><a href="#python-parsing">4. Data Parsing with Python</a></li>
+          <li><a href="#practical-teaching">5. A Guided Project of Practical Teaching</a></li>
+          <li><a href="#wholesale-manager">6. Wholesale Manager</a></li>
+        </ul>
+      </nav>
   </header>
+    <div class="welcome">
+      <h2>Welcome &nbsp;<img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/waving-hand.png?raw=true" width="30px" alt="Welcome"></h2>
+      <p>This is the welcome paragraph</p>
+    </div>
   <section class="projects-details-section">
     <!-- Project 1 -->
-    <div id="project1" class="project">
+    <div id="data-analysis" class="project">
       <h2>1. Data Analysis</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
+          <li>Spreadsheets</li>
+          <li>SQL</li>
+          <li>R</li>
           <li>Python</li>
-          <li>Pandas</li>
-          <li>NumPy</li>
           <li>Data Visualization</li>
+          <li>Data Entry</li>
+          <li>MS Office</li>
         </ul>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
-        <p><b>Data Analyst<b></p>
+        <p><b>Data Analyst</b></p>
       </div>
 
       <div class="overview">
@@ -51,19 +68,27 @@
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>January 2023 - June 2023</p>
+        <p><b>January 2023 - June 2023</b></p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Handling large datasets efficiently.</p>
-        <p>Solution: Implemented data preprocessing techniques and optimized queries.</p>
+        <p><b>Challenge:</b> Handling large datasets efficiently.</p>
+        <p><b>Solution:</b> Implemented data preprocessing techniques and optimized queries.</p>
       </div>
 
       <div class="client-team">
         <h3>Client/Team Information:</h3>
-        <p>Client: ABC Corporation</p>
-        <p>Team: John Doe, Jane Smith</p>
+        <p><b>Client:</b> ABC Corporation</p>
+        <p><b>Team:</b> John Doe, Jane Smith</p>
+      </div>
+      <div class="achievements">
+        <h3>Key Achievements:</h3>
+        <ul class="achievements-list">
+          <li>Increased user engagement by 50%</li>
+          <li>Reduced load times by 40%</li>
+          <li>Implemented a new feature that boosted sales by 20%</li>
+        </ul>
       </div>
 
       <div class="screenshot">
@@ -74,8 +99,8 @@
     </div>
 
     <!-- Project 2 -->
-    <div id="project2" class="project">
-      <h2>2. Web Development</h2>
+    <div id="website-portfolio" class="project">
+      <h2>2. Single Page Website Portfolio</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
@@ -83,7 +108,9 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>React</li>
+          <li>Data Entry</li>
+          <li>Problem Solving</li>
+          <li>Creative Thinking</li>
         </ul>
       </div>
 
@@ -122,22 +149,21 @@
     </div>
 
     <!-- Project 3 -->
-    <div id="project3" class="project">
-      <h2>3. Machine Learning</h2>
+    <div id="latex-compilation" class="project">
+      <h2>3. Compiled Some Books with LaTeX</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
-          <li>Python</li>
-          <li>TensorFlow</li>
-          <li>Scikit-Learn</li>
-          <li>Data Preprocessing</li>
+          <li>Latex</li>
+          <li>Data Entry</li>
+          <li>Problem Solving</li>
         </ul>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
-        <p>Machine Learning Engineer</p>
+        <p>LaTeX Writer</p>
       </div>
 
       <div class="overview">
@@ -170,21 +196,25 @@
     </div>
 
     <!-- Project 4 -->
-    <div id="project4" class="project">
-      <h2>4. Mobile App Development</h2>
+    <div id="python-parsing" class="project">
+      <h2>4. Data Parsing with Python</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
-          <li>Flutter</li>
-          <li>Dart</li>
-          <li>Firebase</li>
+          <li>Python</li>
+          <li>BeautifulSoup</li>
+          <li>requests</li>
+          <li>Data Entry</li>
+          <li>Presentation</li>
+          <li>Data Extracting</li>
+          <li>Data Organizing</li>
         </ul>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
-        <p>Mobile App Developer</p>
+        <p>Data Parser</p>
       </div>
 
       <div class="overview">
@@ -217,22 +247,23 @@
     </div>
 
     <!-- Project 5 -->
-    <div id="project5" class="project">
-      <h2>5. E-commerce Website</h2>
+    <div id="practical-teaching" class="project">
+      <h2>5. A Guided Project of Practical Teaching</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
-          <li>PHP</li>
-          <li>Laravel</li>
-          <li>MySQL</li>
-          <li>JavaScript</li>
+          <li>Teaching</li>
+          <li>Management</li>
+          <li>Problem Solving</li>
+          <li>Critical Thinking</li>
+          <li>Team Management</li>
         </ul>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
-        <p>Back-end Developer</p>
+        <p>College Teacher</p>
       </div>
 
       <div class="overview">
@@ -265,8 +296,8 @@
     </div>
 
     <!-- Project 6 -->
-    <div id="project6" class="project">
-      <h2>6. Game Development</h2>
+    <div id="wholesale-manager" class="project">
+      <h2>6. Wholesale Manager</h2>
 
       <div class="skills">
         <h3>Skills Used:</h3>
