--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-</b><!DOCTYPE html>
+</b>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,6 +11,7 @@
 </head>
 
 <body>
+
   <header>
     <h1>Jawad's Projects</h1>
     <div class="center">
@@ -34,10 +36,11 @@
         </ul>
       </nav>
   </header>
-    <div class="welcome">
-      <h2>Welcome &nbsp;<img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/waving-hand.png?raw=true" width="30px" alt="Welcome"></h2>
-      <p>This is the welcome paragraph</p>
-    </div>
+
+  <div class="welcome">
+    <h2>Welcome &nbsp;<img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/waving-hand.png?raw=true" width="30px" alt="Welcome"></h2>
+    <p>Welcome to the <b>Jawad's Projects</b> page. Here you will see the complete description of each project. It includes the <b>Project Name</b>, <b>Skills</b> which are used in the project, <b>Role</b> during the project, <b>Job</b> in the project, <b>Overview</b> of the project, some important <b>Links</b> related to the projects, <b>Duration</b> of the project, <b>Challenges and Solutions</b> during the project, <b>Team Information</b>, <b>Achievements</b>, and some <b>Preview</b> related to the project</p>
+  </div>
   <section class="projects-details-section">
     <!-- Project 1 -->
     <div id="data-analysis" class="project">
@@ -60,39 +63,55 @@
         <h3>Role:</h3>
         <p><b>Data Analyst</b></p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p>Analyze some data of a company and give some recommendations to increase profit.</p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
-        <p>Details about Project 1...</p>
+        <p>The key things in the Data Analysis project are:</p>
+        <ul>
+          <li><strong>Comprehensive Data Analysis</strong>: Used programming skills to carefully look at the sales and operations data of a well-known bicycle company.</li>
+          <li><strong>Insightful Findings</strong>: Identified key trends and patterns, uncovering critical insights from the data.</li>
+          <li><strong>Strategic Recommendations</strong>: Proposed actionable suggestions based on data-driven insights to optimize company performance and foster growth.</li>
+        </ul>
+      </div>
+
+      <div class="course-links">
+        <h3>Link:</h3>
+        <ul>
+          <li><a href="https://www.coursera.org/learn/google-data-analytics-capstone?specialization=google-data-analytics" target="_blank">Click here</a> to visit the Complete Case Study of the Data Analysis</li>
+          <li><a href="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" target="_blank">Click here</a> to view the certificate</li>
+        </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p><b>January 2023 - June 2023</b></p>
+        <p>6 Days</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Handling large datasets efficiently.</p>
-        <p><b>Solution:</b> Implemented data preprocessing techniques and optimized queries.</p>
+        <p><b>Challenge:</b> Handling large datasets</p>
+        <p><b>Solution:</b> Reduced the time-period for the Data</p>
       </div>
 
       <div class="client-team">
         <h3>Client/Team Information:</h3>
-        <p><b>Client:</b> ABC Corporation</p>
-        <p><b>Team:</b> John Doe, Jane Smith</p>
+        <p>Client: Coursera</p>
+        <p>Team: Individual (Myself)</p>
       </div>
       <div class="achievements">
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
-          <li>Increased user engagement by 50%</li>
-          <li>Reduced load times by 40%</li>
-          <li>Implemented a new feature that boosted sales by 20%</li>
+          <li>Successfully analyzed the Dataset.</li>
+          <li>Got some insightful findings</li>
+          <li>Presented some recommendations</li>
         </ul>
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot1-1.jpg" alt="Screenshot 1 of Data Analysis project">
         <img src="path/to/screenshot1-2.jpg" alt="Screenshot 2 of Data Analysis project">
       </div>
@@ -118,10 +137,21 @@
         <h3>Role:</h3>
         <p>Front-end Developer</p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p></p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
         <p>Details about Project 2...</p>
+      </div>
+
+      <div class="course-links">
+        <h3>Links:</h3>
+        <ul>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
 
       <div class="duration">
@@ -131,8 +161,8 @@
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Ensuring cross-browser compatibility.</p>
-        <p>Solution: Used responsive design techniques and tested across multiple browsers.</p>
+        <p><b>Challenge:</b> Ensuring cross-browser compatibility.</p>
+        <p><b>Solution:</b> Used responsive design techniques and tested across multiple browsers.</p>
       </div>
 
       <div class="client-team">
@@ -142,7 +172,7 @@
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot2-1.jpg" alt="Screenshot 1 of Web Development project">
         <img src="path/to/screenshot2-2.jpg" alt="Screenshot 2 of Web Development project">
       </div>
@@ -165,7 +195,10 @@
         <h3>Role:</h3>
         <p>LaTeX Writer</p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p></p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
         <p>Details about Project 3...</p>
@@ -178,8 +211,8 @@
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Optimizing model performance.</p>
-        <p>Solution: Used hyperparameter tuning and cross-validation techniques.</p>
+        <p><b>Challenge:</b> Optimizing model performance.</p>
+        <p><b>Solution:</b> Used hyperparameter tuning and cross-validation techniques.</p>
       </div>
 
       <div class="client-team">
@@ -189,7 +222,7 @@
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot3-1.jpg" alt="Screenshot 1 of Machine Learning project">
         <img src="path/to/screenshot3-2.jpg" alt="Screenshot 2 of Machine Learning project">
       </div>
@@ -216,12 +249,21 @@
         <h3>Role:</h3>
         <p>Data Parser</p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p></p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
         <p>Details about Project 4...</p>
       </div>
-
+      <div class="course-links">
+        <h3>Link:</h3>
+        <ul>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
       <div class="duration">
         <h3>Duration:</h3>
         <p>July 2023 - December 2023</p>
@@ -229,8 +271,8 @@
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Integrating with third-party APIs.</p>
-        <p>Solution: Used robust error handling and data validation.</p>
+        <p><b>Challenge:</b> Integrating with third-party APIs.</p>
+        <p><b>Solution:</b> Used robust error handling and data validation.</p>
       </div>
 
       <div class="client-team">
@@ -240,7 +282,7 @@
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot4-1.jpg" alt="Screenshot 1 of Mobile App Development project">
         <img src="path/to/screenshot4-2.jpg" alt="Screenshot 2 of Mobile App Development project">
       </div>
@@ -265,12 +307,21 @@
         <h3>Role:</h3>
         <p>College Teacher</p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p></p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
         <p>Details about Project 5...</p>
       </div>
-
+      <div class="course-links">
+        <h3>Link:</h3>
+        <ul>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
       <div class="duration">
         <h3>Duration:</h3>
         <p>October 2023 - March 2024</p>
@@ -278,8 +329,8 @@
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Implementing secure payment gateway.</p>
-        <p>Solution: Integrated with a reliable payment processor and used encryption.</p>
+        <p><b>Challenge:</b> Implementing secure payment gateway.</p>
+        <p><b>Solution:</b> Integrated with a reliable payment processor and used encryption.</p>
       </div>
 
       <div class="client-team">
@@ -289,7 +340,7 @@
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot5-1.jpg" alt="Screenshot 1 of E-commerce Website project">
         <img src="path/to/screenshot5-2.jpg" alt="Screenshot 2 of E-commerce Website project">
       </div>
@@ -302,17 +353,22 @@
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
-          <li>Unity</li>
-          <li>C#</li>
-          <li>3D Modeling</li>
+          <li>Business Managment</li>
+          <li>MS Office</li>
+          <li>Data Entry</li>
+          <li>Spreadsheets</li>
+          <li>Retailer</li>
         </ul>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
-        <p>Game Developer</p>
+        <p>Wholesale Manager</p>
       </div>
-
+      <div class="job">
+        <h3>Job:</h3>
+        <p></p>
+      </div>
       <div class="overview">
         <h3>Overview:</h3>
         <p>Details about Project 6...</p>
@@ -325,8 +381,8 @@
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p>Challenge: Balancing game difficulty and user engagement.</p>
-        <p>Solution: Implemented adaptive difficulty and user feedback loops.</p>
+        <p><b>Challenge:</b> Balancing game difficulty and user engagement.</p>
+        <p><b>Solution:</b> Implemented adaptive difficulty and user feedback loops.</p>
       </div>
 
       <div class="client-team">
@@ -336,7 +392,7 @@
       </div>
 
       <div class="screenshot">
-        <h3>Screenshots:</h3>
+        <h3>Previews:</h3>
         <img src="path/to/screenshot6-1.jpg" alt="Screenshot 1 of Game Development project">
         <img src="path/to/screenshot6-2.jpg" alt="Screenshot 2 of Game Development project">
       </div>
