--- a/index.html
+++ b/index.html
@@ -112,8 +112,15 @@
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="path/to/screenshot1-1.jpg" alt="Screenshot 1 of Data Analysis project">
-        <img src="path/to/screenshot1-2.jpg" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide1.PNG?raw=true" alt="Screenshot 1 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide2.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide3.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide4.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide5.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide6.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide7.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
+        <img src="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" alt="ScreenshotData Analysis project">
+
       </div>
     </div>
 
