--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide5.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide6.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide7.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-<img src="https://drive.google.com/uc?export=view&id=1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ" alt="Screenshot Data Analysis project">
+<img src="https://drive.google.com/thumbnail?id=1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ" alt="Screenshot Data Analysis project">
+
+
 
 
 
