--- a/index.html
+++ b/index.html
@@ -111,14 +111,15 @@
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide1.PNG?raw=true" alt="Screenshot 1 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide2.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide3.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide4.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide5.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide6.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Projects_pngs/Slide7.PNG?raw=true" alt="Screenshot 2 of Data Analysis project">
-<img src="https://drive.google.com/thumbnail?id=1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ" alt="Screenshot Data Analysis project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide1.PNG?raw=true" alt="Slide1.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide2.PNG?raw=true" alt="Slide2.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide3.PNG?raw=true" alt="Slide3.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide4.PNG?raw=true" alt="Slide4.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide5.PNG?raw=true" alt="Slide5.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide6.PNG?raw=true" alt="Slide6.PNG">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide7.PNG?raw=true" alt="Slide7.PNG">
+        <iframe src="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/preview" allow="autoplay"></iframe>
+
 
 
 
