--- a/index.html
+++ b/index.html
@@ -118,13 +118,10 @@
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide5.PNG?raw=true" alt="Slide5.PNG">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide6.PNG?raw=true" alt="Slide6.PNG">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide7.PNG?raw=true" alt="Slide7.PNG">
-        <iframe src="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/preview" allow="autoplay"></iframe>
-
-
-
-
-
-
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/R_case.PNG?raw=true" alt="R Work">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/GDA_certificate.PNG?raw=true" alt="GDA Certificate">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/GDA_badge.PNG?raw=true" alt="GDA Badge">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/GDA_capstone.PNG?raw=true" alt="GDA Capstone">
       </div>
     </div>
 
