--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         </ul>
       </div>
 
-      <div class="role">
-        <h3>Role:</h3>
-        <p><b>Data Analyst</b></p>
-      </div>
       <div class="job">
         <h3>Job:</h3>
         <p>Analyze some data of a company and give some recommendations to increase profit.</p>
+      </div>
+      <div class="role">
+        <h3>Role:</h3>
+        <p><b>Data Analyst</b></p>
       </div>
       <div class="overview">
         <h3>Overview:</h3>
@@ -77,22 +77,23 @@
       </div>
 
       <div class="course-links">
-        <h3>Link:</h3>
+        <h3>Links:</h3>
         <ul>
-          <li><a href="https://www.coursera.org/learn/google-data-analytics-capstone?specialization=google-data-analytics" target="_blank">Click here</a> to visit the Complete Case Study of the Data Analysis</li>
-          <li><a href="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" target="_blank">Click here</a> to view the certificate</li>
+          <li><a href="https://posit.cloud/content/6326840"><b>Click here</b></a> to view the work done by <strong>Jawad</strong> (if you have a Posit Cloud account) or <a href="https://www.coursera.org/learn/google-data-analytics-capstone?specialization=google-data-analytics" target="_blank"><b>Click here</b></a> to visit the <b>Complete Case Study of the Data Analysis</b></li>
+          <li><a href="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Certificate</b></li>
+          <li><a href="https://drive.google.com/file/d/1sd870Gn2tKf7jzW8PsRsGVKHh4VgcfXF/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Data Analytics Professional Certificate</b></li>
         </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>6 Days</p>
+        <p>6 Days in August 2023</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Handling large datasets</p>
-        <p><b>Solution:</b> Reduced the time-period for the Data</p>
+        <p><b>Challenge:</b> Handling large datasets on the free Posit Cloud (online R environment) account.</p>
+        <p><b>Solution:</b> Reduced the range of the Data.</p>
       </div>
 
       <div class="client-team">
@@ -104,8 +105,8 @@
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
           <li>Successfully analyzed the Dataset.</li>
-          <li>Got some insightful findings</li>
-          <li>Presented some recommendations</li>
+          <li>Got some insightful findings.</li>
+          <li>Presented some recommendations.</li>
         </ul>
       </div>
 
@@ -141,36 +142,64 @@
         </ul>
       </div>
 
+      <div class="job">
+        <h3>Job:</h3>
+        <p>Create a simple single-page Portfolio by using HTML, CSS, and Javascript.</p>
+      </div>
       <div class="role">
         <h3>Role:</h3>
         <p>Front-end Developer</p>
       </div>
-      <div class="job">
-        <h3>Job:</h3>
-        <p></p>
-      </div>
       <div class="overview">
         <h3>Overview:</h3>
-        <p>Details about Project 2...</p>
+        <ul>
+          <li><strong>Crafted a <a href="https://jawad-khalil.github.io/Introduction_to_Web_Development_with_HTML_CSS_JavaScript/" target="_blank">Single-Page Website Portfolio</a>:</strong> Showcased my expertise in HTML5, CSS, JavaScript, and various other programming languages by developing a sleek and responsive single-page website portfolio.</li>
+          <li><strong>Developed <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/" target="_blank">My GitHub Site Portfolio</a>:</strong> Utilized HTML, CSS, and JavaScript to design and launch a comprehensive <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">portfolio</a> on GitHub, highlighting my projects and skills in a professional and accessible manner.</li>
+          <li><strong>Designed a Detailed Project(current) Page:</strong> Created an individual page for each project within my portfolio, providing in-depth descriptions and insights into the development process and technologies used.</li>
+        </ul>
       </div>
 
       <div class="course-links">
         <h3>Links:</h3>
         <ul>
-          <li></li>
-          <li></li>
+          <li>Visit the work done by Jawad on GitHub <a href="https://github.com/Jawad-Khalil/Introduction_to_Web_Development_with_HTML_CSS_JavaScript" target="_blank"><b>here</b></a></li>
+          <li>Visit the complete case <a href="https://www.coursera.org/learn/introduction-to-web-development-with-html-css-javacript" target="_blank"><b>here</b></a></li>
+          <li>Visit the project <b>Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b></li>
+          <li>Visit <b>GitHub Site Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b></li>
+          <li>Visit the Portfolio <b>Project Page here</b></li>
         </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>March 2023 - August 2023</p>
+        <p>10 days in March 2024.</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Ensuring cross-browser compatibility.</p>
-        <p><b>Solution:</b> Used responsive design techniques and tested across multiple browsers.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Challenge</th>
+              <th>Solution</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Less knowledge of HTML, CSS, and JavaScript</td>
+              <td>First improved skills in HTML, CSS, and JavaScript</td>
+            </tr>
+            <tr>
+              <td>Time management during the project</td>
+              <td>Created a detailed project timeline and stuck to it</td>
+            </tr>
+            <tr>
+              <td>Ensuring cross-browser compatibilitysa sas sa sas aSA dsad dasd asdas asdas asd asdas das asd</td>
+              <td>Tested and fixed issues across different browsersxxxxxxxxxxxxxxx cxcxcxc cxcx cxcx cxcx cxcx cxc</td>
+            </tr>
+            <!-- Add more challenges and solutions here -->
+          </tbody>
+        </table>
       </div>
 
       <div class="client-team">
@@ -181,8 +210,9 @@
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="path/to/screenshot2-1.jpg" alt="Screenshot 1 of Web Development project">
-        <img src="path/to/screenshot2-2.jpg" alt="Screenshot 2 of Web Development project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/HTML,_CSS,_and_JavaScript/simple_project.png?raw=true" alt="Simple Portfolio">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/HTML,_CSS,_and_JavaScript/Portfolio_screenshot.png?raw=true" alt="GitHub Portfolio Screenshot">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/HTML,_CSS,_and_JavaScript/simple_project.png?raw=true" alt="Project's page screenshot">
       </div>
     </div>
 
